fix(categories): the percentage sign doesn't wrap anymore

--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -26,6 +26,7 @@
 
     .bnk-table-percentage
         text-align right
+        white-space nowrap
 
     .bnk-table-operation
         text-align right
